# FastAPI-RestAPI-for-restaurant-menu

./: README.md  pyproject.toml  start.py
api/: database.py  main.py
api/v1/: models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 643989f9e70a_remove_nullable_from_id.py  775c90be8ea5_create_migrations.py  804eb99fe48e_dish_back_and_submenu_redacted.py  bf606edaead7_dish_redacted.py  c6c4c8da3a40_database_creation.py  f6d728f15d72_remove_unique_from_menu.py
